--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="login-form-parent">
+<div class="login-form-parent box-shadow">
   <div class="lock-icon-parent">
-      <mat-icon>lock</mat-icon>
+      Login to <strong>Everest</strong>
   </div>
   <div class="row">
     <div class="col-xs-12">
@@ -15,6 +15,10 @@
         <mat-label>Password</mat-label>
         <input matInput type="password" />
       </mat-form-field>
+
+      <div class="remember-me">
+          <mat-checkbox>Remember Me</mat-checkbox>
+      </div>
 
       <div class="login-signup">
         <a routerLink="/signup">Sign Up</a>
