--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,33 @@
-<div class="login-form-parent box-shadow">
-  <div class="lock-icon-parent">
-      Login to <strong>Everest</strong>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <mat-form-field appearance="outline">
-        <mat-label>Username</mat-label>
-        <input matInput />
-      </mat-form-field>
+<div class="parent">
+  <div class="login-form-parent box-shadow">
+    <div class="lock-icon-parent">
+        Login to <strong>Everest</strong>
     </div>
-
-    <div class="col-xs-12">
-      <mat-form-field appearance="outline">
-        <mat-label>Password</mat-label>
-        <input matInput type="password" />
-      </mat-form-field>
-
-      <div class="remember-me">
-          <mat-checkbox>Remember Me</mat-checkbox>
-      </div>
-
-      <div class="login-signup">
-        <a routerLink="/signup">Sign Up</a>
-        <button mat-raised-button color="primary">Login</button>
-      </div>
+    <div class="row">
+      <form [formGroup]="loginForm">
+        <div class="col-xs-12">
+          <mat-form-field appearance="outline">
+            <mat-label>Username</mat-label>
+            <input matInput [formControl]="username" />
+          </mat-form-field>
+        </div>
+    
+        <div class="col-xs-12">
+          <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" [formControl]="password"/>
+          </mat-form-field>
+    
+          <div class="remember-me">
+              <mat-checkbox>Remember Me</mat-checkbox>
+          </div>
+    
+          <div class="login-signup">
+            <a routerLink="/signup">Sign Up</a>
+            <button mat-raised-button color="primary">Login</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
