--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,14 +8,14 @@
         <div class="col-xs-12">
           <mat-form-field appearance="outline">
             <mat-label>Username</mat-label>
-            <input matInput [formControl]="username" />
+            <input matInput formControlName="username" />
           </mat-form-field>
         </div>
     
         <div class="col-xs-12">
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
-            <input matInput type="password" [formControl]="password"/>
+            <input matInput type="password" formControlName="password"/>
           </mat-form-field>
     
           <div class="remember-me">
