--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.box-shadow {
+	-webkit-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
+}
+
