validation added to login and signup

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,6 +9,9 @@
           <mat-form-field appearance="outline">
             <mat-label>Username</mat-label>
             <input matInput formControlName="username" />
+            <mat-error *ngIf="loginForm.controls['username'].hasError('required')">
+              Please enter username
+            </mat-error>
           </mat-form-field>
         </div>
     
@@ -16,6 +19,9 @@
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
             <input matInput type="password" formControlName="password"/>
+            <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
+              Please enter password
+            </mat-error>
           </mat-form-field>
     
           <div class="remember-me">
