--- a/src/app/feed/post/post.component.html
+++ b/src/app/feed/post/post.component.html
@@ -1,3 +1,77 @@
-<p>
-  post works!
-</p>
+<div class="post">
+  <!-- Header -->
+  <div class="header">
+    <div class="row">
+      <div class="col-12">
+        <strong>{{ username }}</strong>
+      </div>
+    </div>
+  </div>
+
+  <!-- Image -->
+  <div class="image">
+    <div class="row">
+      <div class="col-12">
+        <img [src]="image" [alt]="title">
+      </div>
+    </div>
+  </div>
+
+  <!-- Title -->
+  <div class="title">
+    <div class="row">
+      <div class="col-12">
+        <strong>{{ title }}</strong>
+      </div>
+    </div>
+  </div>
+
+  <!-- Tags -->
+  <div class="tags">
+    <div class="row">
+      <div class="col-12">
+        <div class="tag">
+          <a *ngFor="let tag of tags"><strong>#{{ tag }}</strong></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Description -->
+  <div class="description">
+    <div class="row">
+      <div class="col-12">
+        <p>
+          {{ description }}
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <div class="controls clearfix">
+    <div class="row">
+      <div class="col-4">
+        <button class="btn btn-like"><fa-icon [icon]="faThumbsUp"></fa-icon></button>
+      </div>
+      <div class="col-4">
+        <button class="btn btn-comment"><fa-icon [icon]="faComment"></fa-icon></button>
+      </div>
+      <div class="col-4">
+        <button class="btn btn-atc"><fa-icon [icon]="faPlus"></fa-icon></button>
+      </div>
+    </div>
+  </div>
+
+  <!-- All Comments -->
+  <div class="all-comments" *ngIf="allComments.length > 0">
+    <div class="row">
+      <div class="col-12">
+        <div class="comment" *ngFor="let comment of allComments">
+          <p class="username"><strong>{{ comment.username }}</strong></p>
+          <p class="text">{{ comment.content }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
