--- a/src/app/feed/post/post.component.scss
+++ b/src/app/feed/post/post.component.scss
@@ -48,6 +48,7 @@
 
     .description {
         padding: 15px;
+        line-height: 25px;
 
         p {
             font-family: 'Raleway', sans-serif;
@@ -60,7 +61,7 @@
         padding: 15px 15px 10px 15px;
 
         .btn {
-            font-size: 12px;
+            font-size: 14px;
             width: 100%;
         }
 
@@ -84,7 +85,7 @@
     }
 
     .all-comments {
-        background-color: rgba(0, 0, 0, .1);
+        background-color: rgba(0, 0, 0, .05);
         padding: 15px 15px 0 15px;
 
         .comment {
