--- a/src/app/feed/post/post.component.scss
+++ b/src/app/feed/post/post.component.scss
@@ -5,7 +5,7 @@
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     max-width: 500px;
     background-color: white;
 
@@ -58,7 +58,7 @@
     }
 
     .controls {
-        padding: 15px 15px 10px 15px;
+        padding: 0 15px 0 15px;
 
         .btn {
             font-size: 14px;
@@ -92,5 +92,36 @@
             font-size: 14px;
         }
     }
+
+    .add-comment {
+        padding: 15px 15px 0 15px;
+        mat-form-field {
+            width: 100%;
+            font-size: 14px;
+        }
+
+        button {
+            border-radius: 4px;
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            font-size: 14px;
+            opacity: 0;
+            box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+            animation: buttonAppear 0.1s ease-in-out;
+            animation-fill-mode: forwards;
+        }
+    }
 }
 
+@keyframes buttonAppear {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1.0);
+    }
+}
