--- a/src/app/feed/post/post.component.scss
+++ b/src/app/feed/post/post.component.scss
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 25px;
-    max-width: 500px;
+    max-width: 600px;
     background-color: white;
 
     .header {
@@ -86,11 +86,26 @@
 
     .all-comments {
         background-color: rgba(0, 0, 0, .05);
+        margin-top: 10px;
         padding: 15px 15px 0 15px;
 
         .comment {
             font-size: 14px;
+            margin-bottom: 15px;
+
+            .username {
+                margin-right: 10px;
+            }
+
+            .text {
+                margin-bottom: 0;
+            }
         }
+    }
+
+    .timestamp {
+        padding-left: 15px;
+        margin-bottom: 15px;
     }
 
     .add-comment {
@@ -102,7 +117,7 @@
 
         button {
             border-radius: 4px;
-            width: 100%;
+            float: right;
             padding: 10px;
             margin-bottom: 15px;
             font-size: 14px;
