--- a/src/app/feed/post/post.component.scss
+++ b/src/app/feed/post/post.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
 .post {
-    border: 1px solid rgba(0, 0, 0, .1);
+    border: 1px solid #EEE;
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
@@ -12,6 +12,7 @@
     .header {
         padding: 15px;
         font-size: 14px;
+        border-bottom: 1px solid #EEE;
     }
 
     .image {
