--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -1,3 +1,7 @@
 .feed-container {
     padding: 15px 15px 15px 25px;
+    background-image: url(../../assets/mountains-cutout.webp);
+	background-size: 100%;
+	background-position: bottom;
+	background-repeat: no-repeat;
 }
