--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,21 @@
 	box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
 }
 
+.active {
+	background-color: rgba(0,0,0,.1);
+	font-weight: bold;
+}
+
+.active-sidenav {
+	font-weight: bold;
+}
+
+mat-nav-list {
+	min-width: 200px;
+
+	a {
+		display: block;
+		padding: 15px 0;
+	}
+}
+
