--- a/client/src/app/feed/post/post.component.scss
+++ b/client/src/app/feed/post/post.component.scss
@@ -8,6 +8,7 @@
     margin-bottom: 25px;
     max-width: 600px;
     background-color: white;
+    box-shadow: 0 8px 20px 0 rgba(218,224,235,.6);
 
     .header {
         padding: 15px;
