--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -1,3 +1,35 @@
 .profile-container {
     padding: 15px 15px 15px 25px;
+
+    .section {
+        border-radius: 5px;
+        box-shadow: 0 8px 20px 0 rgba(218,224,235,.6);
+        background-color: white;
+        padding: 2px 15px 15px 15px;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 15px;
+
+        .section-header {
+            text-transform: uppercase;
+            margin-bottom: 15px;
+
+            h4 {
+                font-family: 'Raleway', sans-serif;
+                margin-bottom: 10px;
+            }
+        }
+
+        .section-content {
+            h6 {
+                font-family: 'Raleway', sans-serif;
+                text-transform: uppercase;
+            }
+            mat-form-field {
+                display: block;
+                width: 100%;
+            }
+        }
+    }
 }
