--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,89 +1,101 @@
 <div class="profile-container">
-  <div class="section">
-    <div class="section-header">
-      <h4>Personal Information</h4>
-    </div>
+  <mat-tab-group>
+    <mat-tab label="Collections">
+      <div class="section">
+        <div class="section-header">
+          <h4>Collections</h4>
+        </div>
+      </div>
+    </mat-tab>
+    <mat-tab label="Profile Management">
+      <div class="section">
+        <div class="section-header">
+          <h4>Personal Information</h4>
+        </div>
 
-    <div class="section-content">
-      <h6>Public Information</h6>
-      <mat-form-field appearance="outline">
-        <mat-label>Name</mat-label>
-        <input matInput placeholder="Name">
-      </mat-form-field>
+        <div class="section-content">
+          <h6>Public Information</h6>
+          <mat-form-field appearance="outline">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Name">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Username</mat-label>
-        <input matInput placeholder="Username">
-      </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Username</mat-label>
+            <input matInput placeholder="Username">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Website</mat-label>
-        <input matInput placeholder="http://www.website.com">
-      </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Website</mat-label>
+            <input matInput placeholder="http://www.website.com">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Bio</mat-label>
-        <input matInput placeholder="Your biography">
-      </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Bio</mat-label>
+            <input matInput placeholder="Your biography">
+          </mat-form-field>
 
-      <h6>Private Information</h6>
-      <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Email">
-      </mat-form-field>
+          <h6>Private Information</h6>
+          <mat-form-field appearance="outline">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Email">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Phone Number</mat-label>
-        <input matInput placeholder="Email">
-      </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Phone Number</mat-label>
+            <input matInput placeholder="Email">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Gender</mat-label>
-        <mat-select>
-          <mat-option value="m">
-            Male
-          </mat-option>
-          <mat-option value="f">
-            Female
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-  </div>
+          <mat-form-field appearance="outline">
+            <mat-label>Gender</mat-label>
+            <mat-select>
+              <mat-option value="m">
+                Male
+              </mat-option>
+              <mat-option value="f">
+                Female
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
 
-  <div class="section">
-    <div class="section-header">
-      <h4>Change Password</h4>
-    </div>
-    <div class="section-content">
-      <mat-form-field appearance="outline">
-        <mat-label>Current Password</mat-label>
-        <input matInput placeholder="">
-      </mat-form-field>
+      <div class="section">
+        <div class="section-header">
+          <h4>Change Password</h4>
+        </div>
+        <div class="section-content">
+          <mat-form-field appearance="outline">
+            <mat-label>Current Password</mat-label>
+            <input matInput placeholder="">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>New Password</mat-label>
-        <input matInput placeholder="">
-      </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>New Password</mat-label>
+            <input matInput placeholder="">
+          </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Confirm New Password</mat-label>
-        <input matInput placeholder="">
-      </mat-form-field>
-    </div>
-  </div>
+          <mat-form-field appearance="outline">
+            <mat-label>Confirm New Password</mat-label>
+            <input matInput placeholder="">
+          </mat-form-field>
+        </div>
+      </div>
 
-  <div class="section">
-    <div class="section-header">
-      <h4>Privacy</h4>
-    </div>
+      <div class="section">
+        <div class="section-header">
+          <h4>Privacy</h4>
+        </div>
 
-    <div class="section-content">
-      <mat-form-field appearance="outline">
-        <mat-label>Username</mat-label>
-        <input matInput placeholder="Write your username">
-        <mat-hint>Write your username to confirm account deletion</mat-hint>
-      </mat-form-field>
-    </div>
-  </div>
+        <div class="section-content">
+          <h6>Delete Account</h6>
+          <mat-form-field appearance="outline">
+            <mat-label>Username</mat-label>
+            <input matInput placeholder="Write your username">
+            <mat-hint>Write your username to confirm account deletion</mat-hint>
+          </mat-form-field>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 </div>
