--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -2,6 +2,7 @@
     padding: 15px 15px 15px 25px;
 
     .section {
+        margin-top: 15px;
         border-radius: 5px;
         box-shadow: 0 8px 20px 0 rgba(218,224,235,.6);
         background-color: white;
