--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -30,3 +30,16 @@ mat-nav-list {
 	}
 }
 
+.float-right {
+	margin-left: auto;
+	display: inline-block;
+}
+
+.clearfix:after {
+	content: " "; /* Older browser do not support empty content */
+	visibility: hidden;
+	display: block;
+	height: 0;
+	clear: both;
+ }
+
