--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -31,6 +31,12 @@
                 display: block;
                 width: 100%;
             }
+
+            .form-button-container {
+                button {
+                    float: right;
+                }
+            }
         }
     }
 }
