--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -39,6 +39,7 @@
       border: 1px solid rgba(0,0,0,.2);
       border-radius: 50%;
       float: right;
+      cursor: pointer;
       img {
         border-radius: 50%;
         width: 100%;
