lastpass bug fixed

--- a/client/src/app/feed/post/post.component.scss
+++ b/client/src/app/feed/post/post.component.scss
@@ -139,6 +139,7 @@
             border: none;
             font-size: 14px;
             float: right;
+            margin-top: 0;
             opacity: 0;
             animation: buttonAppear 0.1s ease-in-out;
             animation-fill-mode: forwards;
