--- a/client/src/app/feed/post/post.component.html
+++ b/client/src/app/feed/post/post.component.html
@@ -65,7 +65,7 @@
       </div>
       <div class="col-4">
         <button mat-button class="btn btn-comment" [ngClass]="{ 'show-comments': showComments }"
-          (click)="showComments = !showComments">
+          (click)="showComments = !showComments" [disabled]="!allComments.length > 0">
           <fa-icon [icon]="faComment"></fa-icon>
         </button>
       </div>
@@ -91,10 +91,10 @@
 
   <!-- Add Comment -->
   <div class="add-comment">
-    <form [formGroup]="commentForm">
+    <form [formGroup]="commentForm" (ngSubmit)="addComment()">
       <div class="row">
         <div [ngClass]="commentForm.controls['comment'].value != '' ? 'col-10' : 'col-12'">
-          <textarea matInput placeholder="Leave a comment" autosize formControlName="comment"></textarea>
+          <textarea matInput placeholder="Leave a comment" autosize formControlName="comment" (keydown.enter)="textareaEnterPressed($event)"></textarea>
         </div>
         <div class="col-2 text-center" *ngIf="commentForm.controls['comment'].value != ''">
           <button>
