--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -4,7 +4,7 @@
         Login to <strong>Everest</strong>
     </div>
     <div class="row">
-      <form [formGroup]="loginForm">
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="col-xs-12">
           <mat-form-field appearance="outline">
             <mat-label>Username</mat-label>
