--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -19,7 +19,7 @@
 			width: 100%;
 		}
 	
-		.lock-icon-parent {
+		.title {
 			text-align: center;
 			padding: 0 0 20px 0;
 			color: rgba(0, 0, 0, 0.8);
@@ -29,12 +29,6 @@
 			strong {
 				font-family: "Raleway", sans-serif;
 			}
-		}
-	
-		.remember-me {
-			font-size: 14px;
-			margin-bottom: 25px;
-			color: rgba(0, 0, 0, 0.5);
 		}
 	
 		.login-signup {
