--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container" [class.is-mobile]="mobileQuery.matches">
-  <mat-toolbar class="toolbar">
+  <mat-toolbar class="toolbar" *ngIf="isLoggedIn">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
