--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="app-name">Everest</h1>
+    <h1 class="app-name"><a routerLink="/feed">Everest</a></h1>
     <div class="profile-container">
       <div class="profile-image" [matMenuTriggerFor]="menu">
         <img src="../assets/portrait.jpg" alt="portrait">
