--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -6,6 +6,13 @@
 	font-family: "Roboto", sans-serif;
 }
 
+a {
+	&:active, &:focus {
+		outline: none;
+		outline-style: none;
+	}
+}
+
 .box-shadow {
 	-webkit-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
